--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "godotTools.editorPath.godot4": "c:\\Users\\avenkat\\Desktop\\dev\\godot\\bin\\godot.windows.editor.x86_64.exe"
+    "godotTools.editorPath.godot4": "c:\\Users\\avenkat\\Desktop\\dev\\godot\\bin\\godot.windows.editor.x86_64.exe",
+    "cmake.sourceDirectory": "C:/Users/avenkat/Desktop/dev/gamedev/project-d/addons/sand/godot-cpp"
 }
