--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,7 +9,7 @@
                 "platform=windows",
                 "target=template_debug",
                 "debug_symbols=yes",
-                "compile_commands=yes",
+                "compiledb=yes",
                 "arch=x86_64"
             ],
             "options": {
